--- a/client/css/main.css
+++ b/client/css/main.css
@@ -1,4 +1,5 @@
 body {
-  background: #b9a9a9;
-  color: #bdbd03;
+  background: #414141;
+  border-radius: 10px;
+  color: #e7e715;
   border: 1px solid black; }
