--- a/client/partials/register.html
+++ b/client/partials/register.html
@@ -1,7 +1,22 @@
-<h1>register form</h1>
-<form>
-  <input type="text" ng-model="email" placeholder="email">    
-  <input type="text" ng-model="username" placeholder="username">
-  <input type="text" ng-model="password" placeholder="password">
-  <button ng-click="register()">register</button>
-</form>
+<section class="auth-form">
+    <h2>Register</h2>
+    <div>
+      Username:
+      <input type="text" autofocus="true" ng-model="account.username">
+    </div>
+    <div>
+      Email:
+      <input type="text" autofocus="true" ng-model="account.email">
+    </div>
+    <div>
+      Password:
+      <input type="password" ng-model="account.password">
+    </div>
+    <div>
+      Password Confirmation:
+      <input type="password" ng-model="account.passwordConf">
+    </div>
+    <div>
+      <button class="btn btn-default" ng-click="register()">Register</button>
+    </div>
+  </section>
