registering, logging in, logging out

--- a/client/partials/register.html
+++ b/client/partials/register.html
@@ -1,5 +1,6 @@
 <section class="auth-form">
     <h2>Register</h2>
+    <h3 class="formError">{{errorMsg}}</h3>    
     <div>
       Username:
       <input type="text" autofocus="true" ng-model="account.username">
