--- a/client/css/main.css
+++ b/client/css/main.css
@@ -1,5 +1,26 @@
 body {
   background: #414141;
   border-radius: 10px;
-  color: #e7e715;
-  border: 1px solid black; }
+  color: #e7e715; }
+
+.navStyle {
+  margin-bottom: 10px; }
+
+.receiptSender {
+  background-color: #05887d;
+  cursor: pointer;
+  display: inline-block;
+  padding: 0.5em 0.9em;
+  border: 0.16em solid #9e9e9e;
+  border-radius: 0.3em;
+  box-sizing: border-box;
+  text-decoration: none;
+  font-family: 'Roboto', sans-serif;
+  font-weight: 300;
+  color: #FFFFFF;
+  text-shadow: 0 0.04em 0.04em rgba(0, 0, 0, 0.85);
+  text-align: center;
+  transition: all 0.2s; }
+  .receiptSender:hover {
+    background-color: #05887d;
+    border: 0.16em solid white; }
