--- a/client/css/main.css
+++ b/client/css/main.css
@@ -6,6 +6,13 @@ body {
 .navStyle {
   margin-bottom: 10px; }
 
+.thumb {
+  width: 40px;
+  height: 80px;
+  float: none;
+  position: relative;
+  top: 7px; }
+
 .receiptSender {
   background-color: #05887d;
   cursor: pointer;
