--- a/client/partials/expense.html
+++ b/client/partials/expense.html
@@ -31,12 +31,12 @@
     </div>
 
     <div class="form-group">
-      <label for="exampleInputPassword1">Note</label>
+      <label>Note</label>
       <input name="notes" ng-model="newExpense.notes" type="text" class="form-control" placeholder="notes...">
     </div>
 
     <div class="form-group">
-      <label for="exampleFormControlSelect1">Select the expense category</label>
+      <label>Select the expense category</label>
       <select name="category_id" ng-model="newExpense.category_id" class="form-control" id="exampleFormControlSelect1" required>
         <option value="4">Car Maintenance</option>
         <option value="15">Clothing</option>
