--- a/client/partials/login.html
+++ b/client/partials/login.html
@@ -1,16 +1,27 @@
+<header>
+  <div ng-include="'partials/navBar.html'"></div>
+</header>
 
-<section class="auth-form">
-    <h2>Login</h2>
-    <h3 class="formError">{{errorMsg}}</h3>
-    <div>
-      Username:
-      <input type="text" autofocus="true" ng-model="account.username">
+<form class="form-horizontal">
+  <h3 class="formError">{{errorMsg}}</h3>
+  <div class="form-group">
+    <label class="control-label col-sm-2" for="email">Username:</label>
+    <div class="col-sm-10">
+      <input type="text" class="form-control" autofocus="true" ng-model="account.username" placeholder="Enter username">
     </div>
-    <div>
-      Password:
-      <input type="password" ng-model="account.password">
+  </div>
+
+  <div class="form-group">
+    <label class="control-label col-sm-2" for="pwd">Password:</label>
+    <div class="col-sm-10"> 
+      <input ng-model="account.password" type="password" class="form-control" id="pwd" placeholder="Enter password">
     </div>
-    <div>
-      <button class="btn btn-info" ng-click="login()">Login</button>
+  </div>
+
+  <div class="form-group"> 
+    <div class="col-sm-offset-2 col-sm-10">
+      <button ng-click="login()" type="submit" class="btn btn-default">Submit</button>
     </div>
-</section>
+  </div>
+
+</form>
