--- a/client/partials/navBar.html
+++ b/client/partials/navBar.html
@@ -1,4 +1,4 @@
-<nav class="navStyle navbar navbar-expand-lg navbar-light bg-light">
+<nav class="navStyle navbar navbar-expand-lg navbar-light">
   <a class="navbar-brand" href="#/welcome">Stubtrax</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
     aria-expanded="false" aria-label="Toggle navigation">
@@ -15,6 +15,9 @@
       </li>
       <li class="nav-item">
         <a class="nav-link" href="#!/expense">New Expense</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="#!/expense-search">My Expenses</a>
       </li>
   </div>
 </nav>
