--- a/client/partials/register.html
+++ b/client/partials/register.html
@@ -1,23 +1,47 @@
+<header>
+    <div ng-include="'partials/navBar.html'"></div>
+  </header>
+  
+
 <section class="auth-form">
     <h2>Register</h2>
-    <h3 class="formError">{{errorMsg}}</h3>    
-    <div>
-      Username:
-      <input type="text" autofocus="true" ng-model="account.username">
+
+<form class="form-horizontal">
+
+  <h3 class="formError">{{errorMsg}}</h3>
+
+  <div class="form-group">
+    <label class="control-label col-sm-2" for="email">Username:</label>
+    <div class="col-sm-10">
+      <input type="email" class="form-control" autofocus="true" ng-model="account.username" placeholder="Enter username">
     </div>
-    <div>
-      Email:
-      <input type="text" autofocus="true" ng-model="account.email">
+  </div>
+
+  <div class="form-group">
+      <label class="control-label col-sm-2" for="email">Email:</label>
+      <div class="col-sm-10">
+        <input type="text" class="form-control" autofocus="true" ng-model="account.email" placeholder="Enter email">
+      </div>
     </div>
-    <div>
-      Password:
-      <input type="password" ng-model="account.password">
+
+  <div class="form-group">
+    <label class="control-label col-sm-2" for="pwd">Password:</label>
+    <div class="col-sm-10">
+      <input ng-model="account.password" type="password" class="form-control" placeholder="Enter password">
     </div>
-    <div>
-      Password Confirmation:
-      <input type="password" ng-model="account.passwordConf">
+  </div>
+
+  <div class="form-group">
+      <label class="control-label col-sm-2" for="pwd">Password Confirmation:</label>
+      <div class="col-sm-10">
+        <input ng-model="account.passwordConf" type="password" class="form-control" placeholder="Confirm password">
+      </div>
     </div>
-    <div>
-      <button class="btn btn-default" ng-click="register()">Register</button>
+
+  <div class="form-group">
+    <div class="col-sm-offset-2 col-sm-10">
+      <button ng-click="register()" type="submit" class="btn btn-default">Register</button>
     </div>
-  </section>
+  </div>
+
+</form>
