--- a/client/sass/main.scss
+++ b/client/sass/main.scss
@@ -1,3 +1,8 @@
+// darkGreen: #1B5F5E
+// light green: #B2D0C6
+// yellow: #FEB15F
+// red: #DA4531
+
 @mixin box-shadow($x, $y, $offset, $blur) {
   -webkit-box-shadow: $x $y $offset $blur rgba(0, 0, 0, 0.61);
   -moz-box-shadow: $x $y $offset $blur rgba(0, 0, 0, 0.61);
@@ -9,34 +14,120 @@
 }
 
 body{
-  background: rgb(65, 65, 65);
+  background: #ffffff;
   border-radius: 10px;
-  color: rgb(231, 231, 21);
-
 }
-
-.navStyle{
-  margin-bottom: 10px;
-}
-
-// */*/*/*/*/* Expense search */*/*/*/*/*
-.movie-container {
+h1{
+  padding: 10px 5px 5px 5px;
   display: flex;
-  flex-flow: row wrap;
+  justify-content: center;
+  @include text-shadow(0.05em);
+}
+
+form{
+  min-width: 85%;
+  min-width: 90%;
+}
+
+.form-div{
+  display: flex;
+  justify-content: center;
+}
+
+.navbar{
+  margin-bottom: 10px;
+  background: #DA4531;
+  border-bottom: 4px ridge black;
+  padding: 0px 5px 0px 15px;
+}
+
+.navbar-light .navbar-brand {
+  color: #000000;
+  font-family: 'Pacifico', cursive;
+  font-size: 2.5em;
+}
+
+.navbar-light .navbar-nav .nav-link {
+  color: #000000;
+  font-family: 'Josefin Sans', sans-serif;
+  padding:5px;
+}
+
+.navbar-light .navbar-toggler {
+  color: black;
+  background: #FEB15F;
+  box-shadow: 1px 1px 7px 2px #1B5F5E;
+  margin-right: .5em;
+}
+
+.navbar-toggler:focus {
+  color: #FEB15F;
+  border-color: #FEB15F;
+}
+
+.navbar-light .navbar-nav .nav-link:hover {
+  color: #FEB15F;
+  border: 1px solid #FEB15F;
+}
+// */*/*/*/*/* Expense search */*/*/*/*/*
+.filter-div{
+  margin-left:2em;
+}
+.filter-label{
+  font-family: 'Josefin Sans', sans-serif;
+  font-size: 20px;
+}
+.filter-btn{
+height: 30px;
+background: white;
+}
+.expense-container {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
   justify-content: space-evenly;
   padding: 5px;
 }
 
 .expenseCard{
+  min-width: 22em;
+  max-width: 35em;
+  min-height:12em;
+  max-height:14em;
   flex-basis: 30%;
   text-align: left;
-  margin: 10px 0;
-  padding-bottom: 12px;
+  margin-top: 15px;
+  padding: 12px;
   position: relative;
-  border: 1px solid black;
+  background: rgb(255, 255, 255);
+  border: 4px ridge rgb(128, 128, 128);
+  box-shadow: 1px 7px 8px -4px rgb(26, 26, 26);
+  border-radius: 15px;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: nowrap;
+  justify-content: space-between;
 }
 
+form{
+  font-family: 'Josefin Sans', sans-serif;  
+  background: white;
+  border: 4px ridge rgb(128, 128, 128);
+  border-radius: 7px;
+  box-shadow: 1px 7px 8px -4px rgb(26, 26, 26);
+  padding: 10px;
+  color: black;
+}
+
+
 // */*/*/*/*/* Receipt Image Page */*/*/*/*/*
+
+.big-thumb {
+  max-width: 10em;
+  max-height: 12em;
+  float: none;
+  position: relative;
+}
 
 .thumb {
   width: 40px;
@@ -46,17 +137,16 @@ body{
   top: 7px;
 }
 
-.receiptSender {
-  background-color: #05887d;
+.receiptBtn {
+  background-color: #DA4531;
   cursor: pointer;
   display:inline-block;
   padding: 0.5em 0.9em;
-  border:0.16em solid rgb(158, 158, 158);
+  border:0.16em solid rgb(214, 196, 196);
   border-radius: 0.3em;
   box-sizing: border-box;
   text-decoration:none;
-  font-family:'Roboto',
-  sans-serif;
+  font-family: 'Josefin Sans', sans-serif;
   font-weight:300;
   color:#FFFFFF;
   @include text-shadow(0.04em);
@@ -64,7 +154,37 @@ body{
   transition: all 0.2s;
 
   &:hover {
-    background-color: #05887d;    
-    border:0.16em solid rgb(255, 255, 255);  
+    background-color: rgb(228, 86, 67);    
+    border:0.16em solid #FEB15F;  
   }
+}
+
+// */*/*/*/*/* Receipt Search Page */*/*/*/*/*
+.check-div{
+  display: flex;
+  flex-direction: row;
+  flex-wrap: nowrap;
+}
+
+.check-box{
+  margin: 10px;
+  padding-left: -5px;
+  width: 45%;
+  border-right: 2px;
+  border-bottom: 2px;
+  border-top: 0px;
+  border-left: 0px;
+  border-color: black;
+  border-style: outset;
+  // border-radius: 15px;
+  // background: rgba(255, 255, 255, 0.924);
+}
+.form-check-label {
+  margin-bottom: 0;
+  padding-left: 5px;
+}
+.form-check-input {
+  position: absolute;
+  margin-top: .3rem;
+  margin-left: -.85rem;
 }
