--- a/client/partials/welcome.html
+++ b/client/partials/welcome.html
@@ -1,2 +1,7 @@
+<header>
+  <div ng-include="'partials/navBar.html'"></div>
+</header>
+
+
 <h1>{{message}}</h1>
 <button ng-click="logout()">logout</button>
