--- a/client/partials/expense-search.html
+++ b/client/partials/expense-search.html
@@ -15,21 +15,21 @@
     <div class="form-group">
       <div class="col-sm-10">
         <label>From:</label>
-        <input name="date" ng-model="expense.date1" type="date" class="form-control" placeholder="From..." required pattern="(?:19|20)[0-9]{2}-(?:(?:0[1-9]|1[0-2])-(?:0[1-9]|1[0-9]|2[0-9])|(?:(?!02)(?:0[1-9]|1[0-2])-(?:30))|(?:(?:0[13578]|1[02])-31))">
+        <input name="date" ng-model="expense.date1" type="date" class="form-control" placeholder="From..." pattern="(?:19|20)[0-9]{2}-(?:(?:0[1-9]|1[0-2])-(?:0[1-9]|1[0-9]|2[0-9])|(?:(?!02)(?:0[1-9]|1[0-2])-(?:30))|(?:(?:0[13578]|1[02])-31))">
       </div>
     </div>
 
     <div class="form-group">
       <div class="col-sm-10">
         <label>To:</label>
-        <input name="date" ng-model="expense.date2" type="date" class="form-control" placeholder="To..." required pattern="(?:19|20)[0-9]{2}-(?:(?:0[1-9]|1[0-2])-(?:0[1-9]|1[0-9]|2[0-9])|(?:(?!02)(?:0[1-9]|1[0-2])-(?:30))|(?:(?:0[13578]|1[02])-31))">
+        <input name="date" ng-model="expense.date2" type="date" class="form-control" placeholder="To..." pattern="(?:19|20)[0-9]{2}-(?:(?:0[1-9]|1[0-2])-(?:0[1-9]|1[0-9]|2[0-9])|(?:(?!02)(?:0[1-9]|1[0-2])-(?:30))|(?:(?:0[13578]|1[02])-31))">
       </div>
     </div>
 
     <div class="col-sm-10">
       <div class="form-group">
         <label>Select a category</label>
-        <select name="category_id" ng-model="expense.category_id" class="form-control" id="exampleFormControlSelect1" required>
+        <select name="category_id" ng-model="expense.category_id" class="form-control" id="exampleFormControlSelect1" >
           <option value="4">Car Maintenance</option>
           <option value="15">Clothing</option>
           <option value="7">Education</option>
@@ -52,12 +52,12 @@
 
     <div class="check-div">
       <div class="check-box form-group form-check">
-        <input ng-model="expense.business" type="checkbox" name="writeOffSearch" class="form-check-input" value="true" name="writeoff">
+        <input ng-model="expense.writeoff" type="checkbox" class="form-check-input" value="false" name="writeoff">
         <label class="form-check-label">Tax Write-Off</label>
       </div>
 
       <div class="check-box form-group form-check">
-        <input ng-model="expense.writeoff" type="checkbox" name="writeOffSearch" class="form-check-input" value="true" name="business">
+        <input ng-model="expense.business" type="checkbox" class="form-check-input" value="false" name="business">
         <label class="form-check-label">Business Expense</label>
       </div>
     </div>
