--- a/client/css/main.css
+++ b/client/css/main.css
@@ -65,24 +65,15 @@ form {
   justify-content: space-evenly;
   padding: 5px; }
 
-.expenseCard {
-  min-width: 22em;
-  max-width: 35em;
-  min-height: 12em;
-  max-height: 14em;
-  flex-basis: 30%;
-  text-align: left;
-  margin-top: 15px;
-  padding: 12px;
-  position: relative;
-  background: white;
+.card {
+  margin: 10px;
   border: 4px ridge gray;
   box-shadow: 1px 7px 8px -4px #1a1a1a;
-  border-radius: 15px;
-  display: flex;
-  flex-direction: row;
-  flex-wrap: nowrap;
-  justify-content: space-between; }
+  border-radius: 8px; }
+
+.card-img-top {
+  max-height: 20em;
+  max-width: 10em; }
 
 form {
   font-family: 'Josefin Sans', sans-serif;
@@ -149,3 +140,17 @@ form {
   position: absolute;
   margin-top: .3rem;
   margin-left: -.85rem; }
+
+.delete-div {
+  height: .5em;
+  display: flex; }
+
+.btn-outline-danger {
+  color: #DA4531;
+  background-color: transparent;
+  border-color: #DA4531; }
+
+.btn-outline-danger:hover {
+  color: #fff;
+  background-color: #DA4531;
+  border-color: #DA4531; }
