--- a/client/partials/expense-search.html
+++ b/client/partials/expense-search.html
@@ -68,53 +68,23 @@
 </div>
 
 
-<div ng-init="loadAllExpenses()">
-  <div class="expense-container">
-    <div class="expenseCard" ng-repeat="expense in expenses">
-      <div>
-        <p>Merchant: {{expense.merchant}}</p>
-        <p>Date: {{expense.date}}</p>
-        <p>Total: ${{expense.total}}</p>
-        <p>Comments: {{expense.notes}}</p>
-      </div>
-      <div>
-        <img class="big-thumb" ng-src={{expense.receipt}} alt="poster for expense.receipt">
-      </div>
+<div ng-init="loadAllExpenses()" class="container">
+  <div class="row">
+  <div class="card col-sm-3" style="width: 18rem;" ng-repeat="expense in expenses">
+    <img class="card-img-top" ng-src={{expense.receipt}} alt="picture of receipt">
+    <div class="card-body">
+      <h5 class="card-title">{{expense.merchant}}</h5>
+      <p class="card-text">{{expense.notes}}</p>
+    </div>
+    <ul class="list-group list-group-flush">
+      <li class="list-group-item">${{expense.total}}</li>
+      <li class="list-group-item">{{expense.date}}</li>
+    </ul>
+    <div class="card-body">
+      <button class="btn btn-outline-danger">X</button>
+      <button class="btn btn-outline-danger">Edit</button>
     </div>
   </div>
 </div>
+</div>
 
-<!-- TODO:----------------DEMO:---------------- 
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<button class="btn" ng-click="searchForExpenses()">search for expenses</button> 
-<br>
-<br>
-<button class="btn" ng-click="searchExpenseDate()">search for expenses between dates</button>
-<br>
-<br>
-<button class="btn" ng-click="searchExpenseWriteoffs()">search for writeoffs between dates</button>
-<br>
-<br>
-<button class="btn" ng-click="searchBusinessExpenses()">search for business expenses between dates</button>
-<br>
-<br>
-<button class="btn" ng-click="searchBusinessWriteoffs()">search for business writeoffs between dates</button>
-<br>
-<br>
-<button class="btn" ng-click="searchExpCats()">search for categories between dates</button>
-<br>
-<br>
-<button class="btn" ng-click="searchCatWriteOffs()">search for categories between dates that are tax write-offs</button>
-<br>
-<br>
-<button class="btn" ng-click="searchBizCats()">search for exp by category that are business expenses</button>
-<br>
-<br>
-<button class="btn" ng-click="searchBizWriteCats()">search for exp by category that are business / tax writeoffs</button>
- -->
