--- a/client/sass/main.scss
+++ b/client/sass/main.scss
@@ -90,25 +90,37 @@ background: white;
   padding: 5px;
 }
 
-.expenseCard{
-  min-width: 22em;
-  max-width: 35em;
-  min-height:12em;
-  max-height:14em;
-  flex-basis: 30%;
-  text-align: left;
-  margin-top: 15px;
-  padding: 12px;
-  position: relative;
-  background: rgb(255, 255, 255);
+// .expenseCard{
+//   min-width: 22em;
+//   max-width: 35em;
+//   min-height:12em;
+//   max-height:14em;
+//   flex-basis: 30%;
+//   text-align: left;
+//   margin-top: 15px;
+//   padding: 12px;
+//   position: relative;
+//   background: rgb(255, 255, 255);
+//   border: 4px ridge rgb(128, 128, 128);
+//   box-shadow: 1px 7px 8px -4px rgb(26, 26, 26);
+//   border-radius: 15px;
+//   display: flex;
+//   flex-direction: row;
+//   flex-wrap: nowrap;
+//   justify-content: space-between;
+// }
+
+.card{
+  margin: 10px;
   border: 4px ridge rgb(128, 128, 128);
   box-shadow: 1px 7px 8px -4px rgb(26, 26, 26);
-  border-radius: 15px;
-  display: flex;
-  flex-direction: row;
-  flex-wrap: nowrap;
-  justify-content: space-between;
+  border-radius: 8px;
 }
+.card-img-top{
+  max-height: 20em;
+  max-width: 10em;
+}
+
 
 form{
   font-family: 'Josefin Sans', sans-serif;  
@@ -188,4 +200,23 @@ form{
   position: absolute;
   margin-top: .3rem;
   margin-left: -.85rem;
+}
+
+// BUTTONS
+.delete-div{
+height: .5em;
+display: flex;
+}
+
+
+.btn-outline-danger {
+  color: #DA4531;
+  background-color: transparent;
+  border-color: #DA4531;
+}
+
+.btn-outline-danger:hover {
+  color: #fff;
+  background-color: #DA4531;
+  border-color: #DA4531;
 }
