--- a/client/partials/welcome.html
+++ b/client/partials/welcome.html
@@ -2,6 +2,17 @@
   <div ng-include="'partials/navBar.html'"></div>
 </header>
 
+<div>
+<h1 class="welcome">Welcome to Stubtrax</h1>
+</div>
 
-<h1>{{message}}</h1>
+<p>Keep track of your expenses</p>
+<p>Upload pictures of receipts on the <a href=" >"New Expense"</a> page and </p>
+
+
+
+
+
+
+
 <button ng-click="logout()">logout</button>
