--- a/client/partials/login.html
+++ b/client/partials/login.html
@@ -3,6 +3,7 @@
 </header>
 
 <form class="form-horizontal">
+  <h2>Login</h2>
   <h3 class="formError">{{errorMsg}}</h3>
   <div class="form-group">
     <label class="control-label col-sm-2" for="email">Username:</label>
