--- a/client/partials/navBar.html
+++ b/client/partials/navBar.html
@@ -1,4 +1,4 @@
-<nav class="navStyle navbar navbar-expand-lg navbar-light">
+<nav class="navStyle navbar navbar-expand-lg navbar-light fixed-top">
   <a class="navbar-brand" href="#/welcome">Stubtrax</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
     aria-expanded="false" aria-label="Toggle navigation">
