--- a/client/css/main.css
+++ b/client/css/main.css
@@ -1,12 +1,23 @@
 body {
-  background: #ffffff;
+  background: #eeeeee;
   border-radius: 10px; }
 
-h1 {
-  padding: 10px 5px 5px 5px;
+header {
+  margin-bottom: 80px; }
+
+.welcome-container {
+  background-color: #cccccc;
+  width: 100%;
+  height: 650px; }
+
+.welcomer {
   display: flex;
-  justify-content: center;
-  text-shadow: 0 0.05em 0.05em rgba(0, 0, 0, 0.85); }
+  justify-content: center; }
+
+.welcome {
+  font-family: 'Josefin Sans', sans-serif;
+  font-size: 3em;
+  color: black; }
 
 form {
   min-width: 85%;
@@ -56,7 +67,7 @@ form {
 
 .filter-btn {
   height: 30px;
-  background: white; }
+  background: #eeeeee; }
 
 .expense-container {
   display: flex;
@@ -66,6 +77,7 @@ form {
   padding: 5px; }
 
 .card-border {
+  background: white;
   border: 4px ridge gray;
   margin: 10px;
   box-shadow: 1px 7px 8px -4px #1a1a1a;
