--- a/client/sass/main.scss
+++ b/client/sass/main.scss
@@ -14,14 +14,27 @@
 }
 
 body{
-  background: #ffffff;
+  background: #eeeeee;
   border-radius: 10px;
 }
-h1{
-  padding: 10px 5px 5px 5px;
+
+header{
+  margin-bottom: 80px;
+}
+
+.welcome-container{
+  background-color: #cccccc;
+  width: 100%;
+  height: 650px;
+}
+.welcomer{
   display: flex;
   justify-content: center;
-  @include text-shadow(0.05em);
+}
+.welcome{
+  font-family: 'Josefin Sans', sans-serif;
+  font-size: 3em;
+  color: black;
 }
 
 form{
@@ -80,7 +93,7 @@ form{
 }
 .filter-btn{
 height: 30px;
-background: white;
+background: #eeeeee;
 }
 .expense-container {
   display: flex;
@@ -91,6 +104,7 @@ background: white;
 }
 
 .card-border{
+  background: white;
   border: 4px ridge rgb(128, 128, 128);
   margin: 10px;
   box-shadow: 1px 7px 8px -4px rgb(26, 26, 26);
