delete modal working

--- a/client/sass/main.scss
+++ b/client/sass/main.scss
@@ -150,6 +150,7 @@ background: #eeeeee;
   font-family: 'Josefin Sans', sans-serif;   
   margin-top:10px;
   margin-left: -25px;
+  width: 190px;
 }
 
 .card-image{
