--- a/client/css/main.css
+++ b/client/css/main.css
@@ -118,7 +118,8 @@ form {
 .card-deets {
   font-family: 'Josefin Sans', sans-serif;
   margin-top: 10px;
-  margin-left: -25px; }
+  margin-left: -25px;
+  width: 190px; }
 
 .card-image {
   max-height: 180px;
