--- a/client/partials/expense-search.html
+++ b/client/partials/expense-search.html
@@ -87,10 +87,136 @@
       </div>
 
       <div class="card-buttons">
-        <button ng-click="deleteSelected()" class="btn btn-outline-danger">X</button>
-        <button class="btn btn-outline-info">Edit</button>
-      </div>
+        <button data-toggle="modal" data-target="#exampleModal" class="btn btn-outline-danger">X</button>
+        <button data-toggle="modal" data-target="#updateModal" class="btn btn-outline-info">Edit</button>
 
+
+
+        <!-- ******************* START OF DELETE MODAL ********************* -->
+        <div data-backdrop="false" class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+            <div class="modal-dialog" role="document">
+              <div class="modal-content">
+                <div class="modal-header">
+                  <h5 class="modal-title" id="exampleModalLabel">Would you like to delete this expense?</h5>
+                  <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                  </button>
+                </div>
+                <div class="modal-body">
+                    <div class="card-container">
+                        <div class="card-deets">
+                          <h3 class="card-merchant">{{expense.merchant}}</h3>
+                          <p class="card-notes">{{expense.notes}}</p>
+                          <h5 class="card-date">{{expense.date}}</h5>
+                          <label>Total</label>
+                          <h5 class="card-total">${{expense.total}}</h5>
+                        </div>
+                </div>
+                <div class="modal-footer">
+                  <button ng-click="expensesDeleter(expense.id); " data-toggle="modal" data-target="#exampleModal" type="button" class="btn btn-outline-danger" data-dismiss="modal">Delete</button>
+                  <button data-toggle="modal" data-target="#exampleModal" type="button" class="btn btn-outline-info">Cancel</button>
+                </div>
+              </div>
+            </div>
+          </div>
+      </div>
+<!-- *********************END OF DELETE MODAL********************* -->
+
+<!--********************* START OF UPDATE MODAL *********************-->
+<div data-backdrop="false" class="modal fade" id="updateModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal-dialog" role="document">
+      <div class="modal-content">
+        <div class="form-div">
+            <form name="myForm">
+              <h2>Update This Expense</h2>
+              <fieldset>
+                <label>Would you like to change your receipt?</label>
+                <div class="col-sm-10 input-group mb-3">
+                  <div class="custom-file">
+                    <input class="custom-file-input" type="file" ngf-select ng-model="picFile" name="file" accept="image/*" ngf-change="uploadPic(picFile)"
+                      ngf-max-size="2MB" ngf-model-invalid="errorFile">
+                    <label class="custom-file-label" for="inputGroupFile01">Receipt Image</label>
+                    <i ng-show="myForm.file.$error.required"></i>
+                  </div>
+                </div>
+                <i ng-show="myForm.file.$error.maxSize">File too large {{errorFile.size / 1000000|number:1}}MB: max 2M</i>
+                <img ng-show="myForm.file.$valid" ngf-thumbnail="picFile" class="thumb">
+                <button ng-click="picFile = null" ng-show="picFile">Remove</button>
+          
+                <div class="form-group">
+                  <label>Date*</label>
+                  <div class="col-sm-10">
+                    <input name="date" ng-model="newExpense.date" type="date" class="form-control" placeholder="{{expense.date}}">
+                  </div>
+                </div>
+          
+                <div class="form-group">
+                  <label>Merchant*</label>
+                  <div class="col-sm-10">
+                    <input name="merchant" ng-model="newExpense.merchant" type="text" class="form-control" placeholder="{{expense.merchant}}" >
+                  </div>
+                </div>
+          
+                <div class="form-group">
+                  <label>Total*</label>
+                  <div class="col-sm-10">
+                    <input name="total" ng-model="newExpense.total" type="number" min="0" step=".01" class="form-control" placeholder="{{expense.merchant}}">
+                  </div>
+                </div>
+          
+                <label>Category*</label>
+                <div class="col-sm-10 input-group mb-3">
+                  <div class="input-group-prepend">
+                    <label class="input-group-text" for="inputGroupSelect01">Category:</label>
+                  </div>
+                  <select ng-model="newExpense.category_id" class="custom-select" id="inputGroupSelect01">
+                    <option value="4">Car Maintenance</option>
+                    <option value="15">Clothing</option>
+                    <option value="7">Education</option>
+                    <option value="6">Entertainment</option>
+                    <option value="11">Fuel</option>
+                    <option value="3">Groceries</option>
+                    <option value="10">Gym Membership</option>
+                    <option value="1">Home</option>
+                    <option value="8">Insurance</option>
+                    <option value="14">Networking</option>
+                    <option value="13">Office Supplies</option>
+                    <option value="9">Phone</option>
+                    <option value="5">Restaurants</option>
+                    <option value="12">Travel</option>
+                    <option value="2">Utilities</option>
+                    <option value="16">Other</option>
+                  </select>
+                </div>
+          
+                <div class="form-group">
+                  <label>Comment</label>
+                  <div class="col-sm-10">
+                    <input name="notes" ng-model="newExpense.notes" type="text" class="form-control" placeholder="{{expense.notes}}">
+                  </div>
+                </div>
+          
+                <div class="check-div">
+                  <div class="check-box form-group form-check">
+                    <input ng-model="newExpense.business" type="checkbox" class="form-check-input" value="true" name="business">
+                    <label class="form-check-label">Business Expense</label>
+                  </div>
+          
+                  <div class="check-box form-group form-check">
+                    <input ng-model="newExpense.writeoff" type="checkbox" class="form-check-input" value="true" name="writeoff">
+                    <label class="form-check-label">Tax Write-Off?</label>
+                  </div>
+                </div>
+
+        <div class="modal-footer">
+          <button ng-click="expensesUpdater(expense.id)" data-toggle="modal" data-target="#updateModal" type="button" class="receiptBtn" data-dismiss="modal">Update</button>
+          <button data-toggle="modal" data-target="#updateModal" type="button" class="btn btn-outline-info">Cancel</button>
+        </div>
+        <!-- ******************* END OF UPDATE MODAL ******************* -->
     </div>
   </div>
 </div>
+
+
+
+
