--- a/client/partials/expense.html
+++ b/client/partials/expense.html
@@ -12,7 +12,7 @@
       <div class="col-sm-10 input-group mb-3">
         <div class="custom-file">
           <input class="custom-file-input" type="file" ngf-select ng-model="picFile" name="file" accept="image/*" ngf-change="uploadPic(picFile)"
-            ngf-max-size="2MB" required ngf-model-invalid="errorFile">
+            ngf-max-size="2MB" ngf-model-invalid="errorFile">
           <label class="custom-file-label" for="inputGroupFile01">Receipt Image</label>
           <i ng-show="myForm.file.$error.required"></i>
         </div>
