--- a/client/sass/main.scss
+++ b/client/sass/main.scss
@@ -153,6 +153,10 @@ background: #eeeeee;
   width: 190px;
 }
 
+.edit-form{
+  max-width: 300px; 
+}
+
 .card-image{
   max-height: 180px;
   max-width: 90px;
@@ -217,6 +221,19 @@ form{
 }
 
 // BUTTONS
+.btn .btn-primary .btn-lg .btn-block {
+  color: #fff;
+  display: block;
+  width: 75%;
+  background: #DA4531 !important;
+  border-color: #DA4531 !important; 
+}
+
+.btn-primary {
+  color: #fff;
+  background: #DA4531 !important;
+  border-color: #DA4531 !important; 
+}
 
 .receiptBtn {
   background-color: #DA4531;
@@ -238,6 +255,12 @@ form{
     background-color: rgb(228, 86, 67);    
     border:0.16em solid #FEB15F;  
   }
+}
+
+.register-div{
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
 }
 
 .delete-div{
