--- a/client/partials/login.html
+++ b/client/partials/login.html
@@ -26,3 +26,8 @@
   </div>
 
 </form>
+
+<div class="register-div">
+<h5>Or</h5>
+<button class="btn btn-primary btn-lg btn-block" type="button" ng-click="go('/register')">Register</button>
+</div>
