--- a/client/partials/expense-search.html
+++ b/client/partials/expense-search.html
@@ -88,14 +88,8 @@
 
       <div class="card-buttons">
         <button ng-click="expensesDeleter(expense.id); loadAllExpenses()" class="btn btn-outline-danger">X</button>
-        <button ng-click="go('/update-expense') ; expenseEdit(expense.id)" class="btn btn-outline-info">Edit</button>
+        <!-- <button ng-click="go('/update-expense') ; expenseEdit(expense.id)" class="btn btn-outline-info">Edit</button> -->
         
-          <!-- Modals -->
-        <!-- <div ng-include="'partials/delete-modal.html'"></div> -->
-        <!-- <div ng-include="'partials/update-modal.html'"></div> -->
-
-        
-
   </div>
 </div>
 
