--- a/client/sass/main.scss
+++ b/client/sass/main.scss
@@ -42,6 +42,15 @@ form{
   min-width: 90%;
 }
 
+.editer{
+  min-width: 85%;
+  min-width: 90%;
+}
+
+.active{
+  color: #FEB15F;
+}
+
 .form-div{
   display: flex;
   justify-content: center;
