--- a/client/css/main.css
+++ b/client/css/main.css
@@ -23,6 +23,13 @@ form {
   min-width: 85%;
   min-width: 90%; }
 
+.editer {
+  min-width: 85%;
+  min-width: 90%; }
+
+.active {
+  color: #FEB15F; }
+
 .form-div {
   display: flex;
   justify-content: center; }
