--- a/client/partials/login.html
+++ b/client/partials/login.html
@@ -21,13 +21,13 @@
 
   <div class="form-group"> 
     <div class="col-sm-offset-2 col-sm-10">
-      <button ng-click="login()" type="submit" class="btn btn-default">Submit</button>
+      <button ng-click="login()" type="submit" class=" receiptBtn btn btn-default">Submit</button>
     </div>
   </div>
 
 </form>
 
 <div class="register-div">
-<h5>Or</h5>
-<button class="btn btn-primary btn-lg btn-block" type="button" ng-click="go('/register')">Register</button>
+<br><br>
+<button class=" receiptBtn btn btn-primary btn-lg btn-block" type="button" ng-click="go('/register')">Create a New Account</button>
 </div>
