--- a/client/partials/register.html
+++ b/client/partials/register.html
@@ -41,7 +41,7 @@
 
   <div class="form-group">
     <div class="col-sm-offset-2 col-sm-10">
-      <button ng-click="register()" type="submit" class="btn btn-default">Register</button>
+      <button ng-click="register()" type="submit" class="receiptBtn btn btn-default">Register</button>
     </div>
   </div>
 
