--- a/client/partials/expense-search.html
+++ b/client/partials/expense-search.html
@@ -81,8 +81,8 @@
         </div>
 
         <div class="img-holder">
-          <img class="card-image" ng-src="images/login-stub.jpg" alt="picture of receipt">
-          <!-- <img class="card-image" ng-src={{expense.receipt}} alt="picture of receipt"> -->
+          <!-- <img class="card-image" ng-src="images/login-stub.jpg" alt="picture of receipt"> -->
+          <img class="card-image" ng-src={{expense.receipt}} alt="picture of receipt">
         </div>
       </div>
 
