--- a/client/css/main.css
+++ b/client/css/main.css
@@ -1,14 +1,17 @@
+.welcome-container {
+  margin-top: -10px;
+  background: url("/images/landing.png") no-repeat;
+  background-size: 100%;
+  background-color: black;
+  height: 1000px;
+  border-top: 4px ridge #FEB15F; }
+
 body {
   background: #eeeeee;
   border-radius: 10px; }
 
 header {
   margin-bottom: 80px; }
-
-.welcome-container {
-  background-color: #cccccc;
-  width: 100%;
-  height: 650px; }
 
 .welcomer {
   display: flex;
